# open-biohit

./: .gitignore  .gitlab-ci.yml  __init__.py  main.py  pipettor.py  pyproject.toml  run-formatting  setup.cfg
docs/: conf.py  index.rst
docs/_static/css/: autodoc-multiline-signatures.css  todos-as-warnings.css
docs/_static/js/: doctest-copybutton.js  shorten-pyobject-references.js
src/biohit_pipettor/: __init__.py  abstract_pipettor.py  pipettor.py  pipettor_simulator.py
src/biohit_pipettor/clr_wrapping/: instrument.pyi
tests/: test_simulation.py
